--- a/temperature-sensor/pom.xml
+++ b/temperature-sensor/pom.xml
@@ -9,14 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>temperature-service</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>ru.shanalotte</groupId>
-            <artifactId>config</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>temperature-sensor</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
