DR-8 DR-11 DR-12 DR-13 #Done

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>temperature-service</module>
         <module>config</module>
         <module>temperature-sensor</module>
+        <module>room-guard</module>
     </modules>
 
     <properties>
