--- a/temperature-sensor/src/main/resources/application-production.properties
+++ b/temperature-sensor/src/main/resources/application-production.properties
@@ -1,4 +1,4 @@
-temperature.server.host=?
-temperature.server.port=?
-bootstrap.server.host=?
-bootstrap.server.port=?
+temperature.server.host=roomserver.roomnetwork
+temperature.server.port=10000
+bootstrap.server.host=roombroker1.roomnetwork
+bootstrap.server.port=29092
