--- a/room-guard/src/main/resources/application-production.properties
+++ b/room-guard/src/main/resources/application-production.properties
@@ -1,4 +1,2 @@
-temperature.server.host=?
-temperature.server.port=?
-bootstrap.server.host=?
-bootstrap.server.port=?
+bootstrap.server.host=roombroker1.roomnetwork
+bootstrap.server.port=29092
