--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
     networks:
       - roomnetwork
     build:
-      context: /temperature-service/.
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: temperature-service/Dockerfile
     environment:
       T_SERVER_PORT: 10000
   zookeeper:
@@ -51,8 +51,8 @@ services:
     networks:
       - roomnetwork
     build:
-      context: /temperature-sensor/.
-      dockerfile: Dockerfile
+      context: ./
+      dockerfile: temperature-sensor/Dockerfile
     environment:
       PRODUCTION: true
     depends_on:
@@ -67,7 +67,7 @@ services:
     networks:
         - roomnetwork
     build:
-        context: /room-guard/.
-        dockerfile: Dockerfile
+        context: ./
+        dockerfile: room-guard/Dockerfile
     environment:
         PRODUCTION: true
