--- a/room-guard/Dockerfile
+++ b/room-guard/Dockerfile
@@ -1,15 +1,12 @@
 FROM maven:3.6.1-jdk-8-alpine AS MAVEN_BUILD
 COPY room-guard/src ./room-guard/src
 COPY room-guard/pom.xml ./room-guard
-COPY temperature-service/src ./temperature-service/src
-COPY temperature-service/pom.xml ./temperature-service
-COPY temperature-sensor/src ./temperature-sensor/src
-COPY temperature-sensor/pom.xml ./temperature-sensor
-COPY config/src ./config/src
-COPY config/pom.xml ./config
-COPY src .
-COPY pom.xml .
+COPY spaceroom-api/src ./spaceroom-api/src
+COPY spaceroom-api/pom.xml ./spaceroom-api
+WORKDIR ./spaceroom-api
 RUN mvn install
+WORKDIR ../room-guard
+RUN mvn clean install
 FROM adoptopenjdk/openjdk8
 RUN mkdir /home/app
 COPY --from=MAVEN_BUILD /room-guard/target/room-guard-2.7.2.jar /home/app
